--- a/vue3-manage/src/assets/main.css
+++ b/vue3-manage/src/assets/main.css
@@ -1,11 +1,10 @@
 @import "./base.css";
 
 #app {
-  /* max-width: 1280px; */
+  max-width: 1280px;
   margin: 0;
   padding: 0;
   font-weight: normal;
-  height: 100vh;
 }
 
 a,
@@ -28,8 +27,8 @@ a,
   }
 
   #app {
-    /* display: grid;
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem; */
+    padding: 0 2rem;
   }
 }
